--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <!--title-icon--------->
     <link rel="shortcut icon" href="images/icon.png" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <!--using FontAwesome---------------->
-    <script
-      src="https://kit.fontawesome.com/c8e4d183c2.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
 
   <body>
@@ -20,24 +15,19 @@
     <section id="main">
       <!--navigation-------------------------------->
       <nav>
-        <!--logo--->
-        <!-- <a href="#" class="logo">LOGO</a> -->
         <!--menu--------->
         <div class="toggle"></div>
         <ul class="menu">
           <li class="active"><a href="#main">Home</a></li>
           <li><a href="#about">About</a></li>
-          <!-- <li><a href="#services">Services</a></li> -->
           <li><a href="#projects">Projects</a></li>
           <li><a href="#technologies">Technologies</a></li>
           <li><a href="#WorkExperience">Work experience</a></li>
           <li><a href="#volunteering">Volunteering</a></li>
-          <!-- <li><a href="#certificates">Certificates</a></li> -->
           <li><a href="#contact-form">Contact</a></li>
         </ul>
-        <!--language-->
-        <!-- <a href="#" class="lang">En</a> -->
       </nav>
+
       <!--name--------------------------->
       <div class="name">
         <!--hello------->
@@ -47,29 +37,22 @@
         <!--details--------------->
         <p class="details">
           Extremely motivated to constantly develop my skills and grow
-          professionally. I am confident in my ability to teach my self and
-          teach others coding.
+          professionally.
         </p>
-        <!--cv button-------------------->
-        <!-- <a href="#" class="cv-btn">Download Cv</a> -->
       </div>
       <!--down arrow-------------->
       <div class="black-line"></div>
-      <!-- social----------------->
-      <!-- <div class="social">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
-      </div> -->
     </section>
     <!--about----------------------->
     <section id="about">
       <!--text---------------------->
       <div class="about-text">
         <!-- <h1>About Me</h1> -->
-        <h2 style="margin-left: 28%">Full-Stack Web Developer</h2>
+        <h2 style="margin-left: 28%; margin-top: 1%">
+          Full-Stack Web Developer
+        </h2>
         <img
+          class="about-image"
           style="
             background-color: #ffc0cb;
             width: 500px;
@@ -85,20 +68,15 @@
         <p style="padding-bottom: 2.5%">
           I am a Full Stack Developer with a vast array of knowledge in many
           different front end and back end languages, responsive frameworks,
-          database, and best code practice. My objective is simple to be the
-          best web developer that i can be and to contribute to the technology
+          database, and best code practice. My objective is simply to be the
+          best web developer that I can be and to contribute to the technology
           industry all that I know and can do. I am dedicated to perfecting my
           craft by learning from more seasoned developers, remaining humble, and
           continuously making strides to learn all that I can about development.
-          I believe that my understanding of problem solving and complex
+          I believe that my understanding of problem-solving and complex
           algorithms are also skills that have and will continue to contribute
           to my overall success as a developer.
         </p>
-        <!-- <button>View More Details</button> -->
-      </div>
-      <!--about-model----------------->
-      <div class="about-model">
-        <!-- <img src="images/about-model.png" alt="model" /> -->
       </div>
     </section>
 
@@ -211,8 +189,6 @@
           <!--bg-img------------->
           <img src="images/react.png" />
         </div>
-        <!---------------------------------------------------------------------------------------------------->
-
         <!--technologies-box-6-------->
         <div class="p-box-tech">
           <!--bg-img------------->
@@ -274,7 +250,7 @@
       <!--heading----------->
       <h1 class="p-headind">Work Experience</h1>
       <p style="margin-top: 0%; margin-bottom: 3.5%">
-        Part of my journey in a workplace
+        Part of my journey in the workplace.
       </p>
       <!--WorkExperience-container------------>
       <div class="p-container">
@@ -286,7 +262,6 @@
             <p>Islamic University</p>
           </div>
           <!--bg-img------------->
-
           <img src="images/lecture.png" />
         </div>
         <!--WorkExperience-box-2-------->
@@ -341,10 +316,11 @@
         </div>
       </div>
     </section>
+
     <!--volunteering------------------->
     <section id="volunteering">
       <!--heading----------->
-      <h1 class="p-headind">Volunteering</h1>
+      <h1 class="p-headind" style="margin-top: 1.2%">Volunteering</h1>
       <p style="margin-top: 0%; margin-bottom: 3.5%">
         Part of my journey in a volunteering
       </p>
@@ -352,16 +328,31 @@
       <div class="p-container">
         <!--volunteering-box-1-------->
         <div class="p-box">
+          <!--text--------->
+          <div class="overlay-text-volunteering">
+            <h1>Social entrepreneur</h1>
+            <p>Implementation of social and humanitarian initiatives</p>
+          </div>
           <!--bg-img------------->
-          <img src="images/bat1.JPG" />
+          <img src="images/batoota.JPG" />
         </div>
         <!--volunteering-box-2-------->
         <div class="p-box">
+          <!--text--------->
+          <div class="overlay-text-volunteering">
+            <h1>English teacher</h1>
+            <p>Support childhood education</p>
+          </div>
           <!--bg-img------------->
           <img src="images/teaching.JPG" />
         </div>
         <!--volunteering-box-3-------->
         <div class="p-box">
+          <!--text--------->
+          <div class="overlay-text-volunteering">
+            <h1>Psychologist</h1>
+            <p>Helping children with mental health</p>
+          </div>
           <!--bg-img------------->
           <img src="images/tripp.png" />
         </div>
